@@ -1,0 +1,11 @@
+DELETE FROM `spell_script_names` WHERE `ScriptName`='spell_sindragosa_collision_filter';
+INSERT INTO `spell_script_names` (`spell_id`, `ScriptName`) VALUES 
+(69845, 'spell_sindragosa_collision_filter'),
+(70117, 'spell_sindragosa_collision_filter'),
+(70127, 'spell_sindragosa_collision_filter'),
+(71053, 'spell_sindragosa_collision_filter'),
+(71054, 'spell_sindragosa_collision_filter'),
+(71055, 'spell_sindragosa_collision_filter'),
+(72528, 'spell_sindragosa_collision_filter'),
+(72529, 'spell_sindragosa_collision_filter'),
+(72530, 'spell_sindragosa_collision_filter');
